-fixed localization for the DownloadInfo and PackageInfo -updated languagefiles a little

--- a/trunk/ressourcen/jd/languages/english.lng
+++ b/trunk/ressourcen/jd/languages/english.lng
@@ -23,6 +23,7 @@ addons.schedule.menu.stop = Stop
 addons.schedule.menu.time = Select time: 
 addons.schedule.name = Scheduler
 config.container.defaultname = General
+config.entriespanel.defaultname = Configuration
 container.message.comment = Comment
 container.message.created = Created with
 container.message.password = Password
@@ -72,6 +73,7 @@ downloadlink.status.error.plugin_specific = Plugin Error
 downloadlink.status.error.temp_unavailable = Temp. unavailable
 downloadlink.status.error.unknown = Unknown Error
 downloadlink.status.todo = Todo
+gui.accountcheck.pluginerror = Plugin %s may be defect. Inform support!
 gui.askName = What's your name?
 gui.btn_accept = Accept
 gui.btn_add = Add
@@ -84,6 +86,9 @@ gui.btn_saveToFile = Save to file
 gui.btn_select = Select
 gui.captchaWindow.title = jAntiCaptcha actived!
 gui.captchaWindow.title_wait = jAntiCaptcha finished.
+gui.config.addons.install.tab = Installation & updates
+gui.config.addons.name = Network/Download
+gui.config.addons.settings.tab = Settings
 gui.config.btn_cancel = Cancel
 gui.config.btn_restart = Save & Restart
 gui.config.btn_save = Save
@@ -92,6 +97,7 @@ gui.config.captcha.train.level = Displaythreshold
 gui.config.captcha.train.level.instanthelp = http://ns2.km32221.keymachine.de/jdownloader/web/page.php?id=3
 gui.config.captcha.train.show_timeout = Countdown for captchawindow
 gui.config.download.autochunks = Fit chunks to filesize
+gui.config.download.autoresume = Let Reconnects interrupt resumeable downloads
 gui.config.download.buffersize = Max. Buffersize[MB]
 gui.config.download.chunks = Number of Chunks/Download
 gui.config.download.connectionlost.wait = Waittime after loosing connection [s]
@@ -287,6 +293,9 @@ gui.config.reconnect.name = Reconnect
 gui.config.reloadContainer = Reload Download Container
 gui.config.showContainerOnLoadInfo = Show detailed containerinformation on load
 gui.config.showContainerOnLoadInfo.helpurl = http://jdownloader.org/page.php?id=102
+gui.config.subPanel.btn_cancel = Cancel
+gui.config.subPanel.btn_ok = OK
+gui.config.tabLables.addons = Addon manager
 gui.config.tabLables.containerPlugin = Link Containers
 gui.config.tabLables.decryptPlugin = Decryption
 gui.config.tabLables.download = Download/Network
@@ -327,15 +336,23 @@ gui.dialogs.agb_tos.agbAccepted = I accept the terms of service
 gui.dialogs.agb_tos.title = Termas of service not accepted
 gui.dialogs.helpDialog.btn.help = Help
 gui.dialogs.helpDialog.btn.ok = OK
+gui.dialogs.helpDialog.btn.stopTimer = Stop Timer
 gui.dialogs.progress.title = In progress... please wait
 gui.download.bps = bytes/sec
+gui.download.create_connection = Connecting...
 gui.download.desc = <font color='#00aa00' size='14'>Help JDownloader to get the translation of your native language better!</font><hr>The string for <b>%s</b> isn't translated for <b>%s</b>.<br/> Please enter your translation or select <i>Cancel</i><br/><div style='border: medium dotted #0000FF'><font color='#ff0000'>You can disable these translation request via Configuration -> User interface</font></div><br>Please translate followed string to: <b><u>%s</u></b>. Select 'OK' if all is already fine!
+gui.download.filesize_unknown = (Filesize unknown)
 gui.download.kbps = KBytes/sec
+gui.download.onlinecheckfailed = [Not available]
+gui.download.waittime_status = Wait %s min
 gui.downloadlink.aborted = [aborted]
 gui.downloadlink.disabled = [deactivated]
+gui.downloadlink.finished = [finished]
+gui.downloadlink.hosterwaittime = [wait for new ip]
 gui.downloadlink.offline = [offline]
 gui.downloadlink.status.crcfailed = Checksum error
 gui.downloadlink.status.crcok = Checksum OK
+gui.downloadlink.status.wait = wait %s min
 gui.downloadlist.delete = Delete selected links ?
 gui.downloadlist.tooltip.connections = Act. connections:
 gui.downloadlist.tooltip.partnum = Parts:
@@ -355,13 +372,6 @@ gui.downloadTab.popup.up = Move Up
 gui.dropTarget.downloadsAdded = Downloads added:
 gui.droptarget.label = Drop links here!
 gui.droptarget.title = Link Collector
-gui.frame.packageinfo.entrycomment = Comment
-gui.frame.packageinfo.entrydldirectory = Downloaddirectory
-gui.frame.packageinfo.entrylinks = Links
-gui.frame.packageinfo.entryloaded = Loaded
-gui.frame.packageinfo.entryname = Name
-gui.frame.packageinfo.entrypackagesize = Packagesize
-gui.frame.packageinfo.entryPassword = Password
 gui.helpLocale.title = Support helps alot!
 gui.images.jd_logo = gui.images.jd_logo
 gui.javacheck.html = <link href='http://jdownloader.org/jdcss.css' rel='stylesheet' type='text/css' /><div style='width:534px;height;200px'><h2>You useses a wrong Java version. Please use a original Sun Java. Start jDownloader anyway?<table width='100%%'><tr><th colspan='2'>Your Java Version:</th></tr><tr><th>Runtime Name</th><td>%s</td></tr><tr><th>Runtime Version</th><td>%s</td></tr></table></div>
@@ -376,6 +386,7 @@ gui.linkgrabber.btn_sortHost = Sort via host name
 gui.linkgrabber.cmb.insertAtPosition = Insert at:
 gui.linkgrabber.comment = Comment:
 gui.linkgrabber.doUnrar = UnRAR this package after download
+gui.linkgrabber.lbl.isoffline = [offline] 
 gui.linkgrabber.lbl.isonline = [online]
 gui.linkgrabber.lbl.newpackage = New Package
 gui.linkgrabber.lbl.notonlinechecked = [Online status not checked]
@@ -435,36 +446,23 @@ gui.linkgrabber.title = Linkcollector active (D&D + Clipboard)
 gui.linkgrabber.title_1 = Link(s) in
 gui.linkgrabber.title_2 = Package(s)
 gui.linkgrabber.writeInfoFile = Write infoFile for this package
-gui.linkInfo.Available = Available
-gui.linkInfo.available = available
-gui.linkInfo.Comment = Comment
-gui.linkInfo.comment = Comment
-gui.linkInfo.Dateigröße = Filesize
-gui.linkInfo.Download = Download
-gui.linkInfo.download = Download
-gui.linkInfo.download.chunks.label = Chunks
-gui.linkInfo.download.status = Download status
-gui.linkInfo.file = File
-gui.linkInfo.Filesize = Filesize
-gui.linkInfo.fileSize = Filesize
-gui.linkInfo.Geschwindigkeit = Speed
-gui.linkInfo.Kommentar = Comment
-gui.linkInfo.Package = Package
-gui.linkInfo.package = Package
-gui.linkInfo.Packet = Packet
-gui.linkInfo.Password = Password
-gui.linkInfo.password = Password
-gui.linkInfo.Passwort = Password
-gui.linkInfo.Plugin Status = Plugin Status
-gui.linkInfo.Save to = Save to
-gui.linkInfo.saveTo = Save to
-gui.linkInfo.Speed = Speed
-gui.linkInfo.speed = speed
-gui.linkInfo.Speichern in = Save to
-gui.linkInfo.Verfügbar = Available
-gui.linkInfo.waitTime = Wait time
-gui.linkInfo.Wartezeit = Waittime
-gui.linkinformation.title = Link Information:
+gui.linkinfo.available = Available
+gui.linkinfo.available.notchecked = not checked
+gui.linkinfo.available.ok = File OK
+gui.linkinfo.comment = Comment
+gui.linkinfo.download = Download
+gui.linkinfo.download.activated =  is activated
+gui.linkinfo.download.deactivated =  is deactived
+gui.linkinfo.download.notunderway =  is not in process
+gui.linkinfo.download.underway =  is in process
+gui.linkinfo.filesize = Filesize
+gui.linkinfo.package = Package
+gui.linkinfo.password = Password
+gui.linkinfo.saveto = Save to
+gui.linkinfo.speed = Speed
+gui.linkinfo.title = Link Information: 
+gui.linkinfo.waittime = Waittime
+gui.linklist.editpackagename.message = New Packagename
 gui.linklist.newpackage.message = Name of the new package
 gui.linklist.newpackage.title = Make new package
 gui.logDialog.btn_censor = Censor Log
@@ -604,6 +602,13 @@ gui.menu.plugins.decrypt = Decrypter
 gui.menu.plugins.help = ?
 gui.menu.plugins.host = Hoster
 gui.menu.plugins.phost = Premium hoster
+gui.packageinfo.comment = Comment
+gui.packageinfo.dldirectory = Downloaddirectory
+gui.packageinfo.links = Links
+gui.packageinfo.loaded = Loaded
+gui.packageinfo.name = Name
+gui.packageinfo.packagesize = Packagesize
+gui.packageinfo.password = Password
 gui.plugins.decrypt.wiireloaded.calcresult = result of the calcualtion
 gui.reconnect.confirm = Do you want to reconnect your connection?
 gui.reconnect.success = Reconnect successfull
@@ -927,10 +932,9 @@ plugins.optional.langfileeditor.adoptDefaults = Adopt Default(s)
 plugins.optional.langfileeditor.adoptDefaults.missing = Adopt Defaults of Missing Entries
 plugins.optional.langfileeditor.adoptDefaultValue = Adopt Default Value
 plugins.optional.langfileeditor.browse = Browse
-plugins.optional.langfileeditor.browseLanguageFile = Browse Language File
-plugins.optional.langfileeditor.browseSourceFolder = Browse Source Folder
 plugins.optional.langfileeditor.cancel = Cancel
 plugins.optional.langfileeditor.clearAllValues = Clear All Values
+plugins.optional.langfileeditor.clearValues = Clear Value(s)
 plugins.optional.langfileeditor.close = Close
 plugins.optional.langfileeditor.colorize = Colorize
 plugins.optional.langfileeditor.colorizeMissing = Colorize Missing Entries
@@ -945,7 +949,6 @@ plugins.optional.langfileeditor.file = File
 plugins.optional.langfileeditor.firstKey = First Key
 plugins.optional.langfileeditor.key = Key
 plugins.optional.langfileeditor.languageFile = Language File: 
-plugins.optional.langfileeditor.languageFile.select = <Please select a Language File!>
 plugins.optional.langfileeditor.languageFileValue = Language File Value
 plugins.optional.langfileeditor.name = JDLangFileEditor
 plugins.optional.langfileeditor.ok = OK
@@ -965,7 +968,6 @@ plugins.optional.langfileeditor.show_gui = Start Languageeditor
 plugins.optional.langfileeditor.showDupes = Show Dupes
 plugins.optional.langfileeditor.sortEntries = Sort Entries
 plugins.optional.langfileeditor.sourceFolder = Source Folder: 
-plugins.optional.langfileeditor.sourceFolder.select = <Please select the Source Folder!>
 plugins.optional.langfileeditor.sourceValue = Source Value
 plugins.optional.langfileeditor.string = String
 plugins.optional.langfileeditor.title = jDownloader - Language File Editor
